# OpenOxygen

./: # OpenOxygen OUV Training R2.txt  .env.example  .gitignore  .gitkeep  .npmignore  26w13aB_PHASE1_PLAN.md  26w15aB-26w15aHRoadmap.md  BUGFIXES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_COMPLETION_REPORT.md  DEV_PLAN_26w14a.md  EMERGENCY_RECOVER.md  FILE_INDEX.json  INSTALL.md  LICENSE  OpenOxygen 全栈开发规划与ToDo List.md  OpenOxygen 技术架构白皮书.md  PHASE3_PLAN.md  PHASE_A2_SUMMARY.md  PROGRESS_UPDATE.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_NEW.md  README.md  RELEASE_26w13aB.md  RELEASE_NOTES_26w113.md  RELEASE_NOTES_26w114.md  RELEASE_SUMMARY_26w13aB.md  REORGANIZATION_PLAN.json  REWRITE_PLAN.md  ROADMAP_26w11aE.md  ROADMAP_26w11aE_DETAILED.md  ROADMAP_26w15aC.md  ROADMAP_26w15aD.md  ROADMAP_26w15aDTest.md  SPRINT_12H_PLAN.md  SPRINT_12H_PROGRESS.md  TEST_REPORT.md  VERSION.txt  (+17 more)
OLB/: Cargo.toml  README.md  build.bat  build.rs  build.sh  pyproject.toml
OLB/python/olb/: __init__.py  config.py
OLB/python/tests/: test_core.py
OLB/src/: attention.rs  kv_cache.rs  lib.rs  memory.rs  moe.rs  quantization.rs  router.rs
OpenOxygen-Portable/: README.md  Start.bat  VERSION.txt  package.json
ai/: bridge.js
assets/: .gitkeep
benchmark/: performance.ts
crates/agent-bridge/: Cargo.toml
crates/agent-bridge/src/: lib.rs
crates/cli-executor/: Cargo.toml
crates/cli-executor/src/: lib.rs  parser.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  scheduler.rs  state.rs
crates/gui-control/: Cargo.toml
crates/gui-control/src/: capture.rs  controller.rs  input.rs  lib.rs  uia.rs  windows_impl.rs
crates/htn-planner/: Cargo.toml
crates/htn-planner/src/: executor.rs  lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  persistence.rs
crates/ouv/: Cargo.toml
crates/ouv/src/: lib.rs
crates/vlm-connector/: Cargo.toml
crates/vlm-connector/src/: lib.rs
crates/vlm-connector/src/providers/: openai.rs
desktop/: README.md  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: 26w15a_ARCHITECTURE.md  API.md  ARCHITECTURE.md  BUILD_GUIDE.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  FAQ.md  LLM_INTEGRATION_PLAN.md  PHASE2_COMPLETE.md  PHASE2_IMPLEMENTATION.md  PHASE2_STATUS.md  QUICKSTART.md  README_CN.md  RELEASE_26w11aD.md  SECURITY.md  SKILLS.md  SKILL_GUIDE.md  guides
examples/: basic.js
native/: .npmrc  binding.cpp  binding.gyp  build_vs2026.bat  manual_build.bat  package.json  test_native.js
reports/: daily-report-000f8dc5-e4b0-4ab1-8d5a-dc401340bf10.md  daily-report-02b26708-033a-4d3d-8881-52795534e895.md  daily-report-07740fbc-29d3-4e0f-9f98-37f64eac6783.md  daily-report-154ae9d9-a684-46b2-ad3a-51213cc00bcc.md  daily-report-1b09e89a-c052-44f9-9bc8-72c7e1bf8959.md  daily-report-1bf0cabc-04f0-412c-880d-70164fdb2b59.md  daily-report-20c7283e-736a-40e9-8dbf-c7c204064a9a.md  daily-report-27abb99f-2cca-48d5-8b1b-61068831da8e.md  daily-report-3602150c-1d63-4b8a-a7fd-918da0929a0f.md  daily-report-36a1b5b2-1800-4720-a851-626d1f9bca6b.md  daily-report-3a711442-4a85-481d-8779-4e8bf0d725be.md  daily-report-463c3039-3953-4800-aa2e-00777f679612.md  daily-report-47e03eac-d68f-4627-b049-ec75326f480c.md  daily-report-4de6f9f8-3a08-469e-b08b-bd46070ec9df.md  daily-report-4e290319-50af-4bf9-ac7d-dda884fc46aa.md  daily-report-53065018-6e51-456c-b6f5-8b589fcde611.md  daily-report-5efb1a8a-898b-4efb-b8ac-e61cc6c5654d.md  daily-report-659a19df-03a6-4e60-8825-cd9f1fb50cc9.md  daily-report-6dc7a6a4-046b-4057-af65-f15678781292.md  daily-report-72303b33-2a09-42a5-930b-ca154b7c5ce2.md  daily-report-7bf652c1-7545-452a-b0e2-20497bdebbc5.md  daily-report-7efc11a4-59e4-44dc-a3e3-165cfce63bee.md  daily-report-8aa57b70-adc2-4e84-9817-8e6afee7b525.md  daily-report-8ed67f60-a392-4e1d-bdee-ef10bd778137.md  daily-report-92052ec4-580f-494a-a368-5468203c9d0b.md  daily-report-9318386b-e8c3-43e8-82af-0296677eaf7a.md  daily-report-98515f07-f2a1-45e7-a2ea-5e673c2cbda8.md  daily-report-9eaf2613-ce66-461a-9000-02ed7f89f4ed.md  daily-report-9f89d33e-9589-4c17-9371-ddb7f82b3b62.md  daily-report-a76410ef-86b1-4488-b0e5-d7dd3dc51fc0.md  daily-report-b1697612-38bb-4cde-aa78-aef256aaa08d.md  daily-report-b745cac6-b309-4626-ab1e-119518615379.md  daily-report-bc0bbfc0-d194-40ca-882d-515f6f1f927a.md  daily-report-be95b3e9-347f-4be9-80e1-5e808d216580.md  daily-report-d326071a-b9eb-48b3-8511-5d9c35050460.md  daily-report-d46e3cca-f4d1-48a0-ae30-4c12f62fdfb5.md  daily-report-d59d63ae-53ce-4103-89ff-116e92365bbd.md  daily-report-ecac3462-0a9b-41ae-8382-5e033f5a1486.md  daily-report-f304db1a-a28c-48f1-a0f4-2a0db4824d18.md  daily-report-f41a4d8a-2f07-47da-b859-75ab6e3b502b.md  (+81 more)
scripts/: build-installer.bat  build-installer.nsi  build-olb.bat  build-olb.sh  build-portable.bat  build-release.ps1  cleanup-redundant.bat  file-indexer.cjs  fix-all-encoding.ps1  fix-encoding.mjs  fix-encoding.py  fix-types.cjs  fix-utils.ps1  fix_eval.py  project-audit.cjs  refactor-to-rust.mjs  release-pipeline.bat  run-tests.cjs  security_audit.py  start.bat  type-safe-reader.js  update-version.cjs  user-prompt.ps1  verify-install.ps1  verify.sh
skills/: .gitkeep
src/: entry.ts  index.ts  native-bridge-v3.ts  native-bridge.ts
test/: 26w13a-p1-browser-compat.mjs  26w13a-p1-smoke.mjs  26w13a-p2-software-compat.mjs  26w13a-p3-multi-ai.mjs  26w13a-p4-network.mjs  26w13a-training-r2.mjs  26w13a-training-r3.mjs  26w13a-training-r4.mjs  26w13a-training-r5.mjs  26w13a-training-r6.mjs  26w13a-training-r7.mjs  26w13a-training-r8.mjs  26w13a-training-r9.mjs  26w13a-training.mjs  26w13b-phase0-test.mjs  26w14a-comprehensive-report-v2.json  26w14a-comprehensive-report.json  26w14a-comprehensive-test-v2.mjs  26w14a-comprehensive-test.mjs  26w15a-agent-mission.mjs  26w15a-comprehensive-report.json  26w15a-comprehensive-test.mjs  debug-llm-decision.mjs  debug-llm-json.mjs  debug-minimal-prompt.mjs  debug-uia.cjs  debug-vlm.cjs  document-generator.vitest.test.mjs  e2e.mjs  edge-automation.vitest.test.mjs  full-suite.mjs  global-memory.test.mjs  (+27 more)
(+297 files in other folders)
