[workspace]
members = [
    "crates/core",
    "crates/gui-control",
    "crates/cli-executor",
    "crates/perception",
    "crates/agent-bridge",
    "crates/vlm-connector",
    "crates/memory",
    "crates/ouv",
    "crates/htn-planner",
]
resolver = "2"

[workspace.package]
name = "openoxygen-next"
version = "1.0.0"
edition = "2021"
authors = ["OpenOxygen Team"]
license = "MIT"
repository = "https://github.com/StarsailsClover/OpenOxygen2.0"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full", "sync", "time", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
tracing = "0.1"
image = "0.25"

# Windows specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
