[package]
name = "olb-core"
version = "0.103.0"
edition = "2021"
authors = ["OpenOxygen Team"]
description = "OpenOxygen Lightning Backend - Universal LLM Acceleration Engine"
license = "MIT"

[lib]
name = "olb_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"
ndarray = { version = "0.15", features = ["rayon"] }

# CUDA support
cudarc = { version = "0.11", optional = true }

# Memory management
memmap2 = "0.9"
crossbeam = "0.8"
parking_lot = "0.12"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math & ML
matrixmultiply = "0.3"
rayon = "1.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Profiling
profiling = "1.0"

[features]
default = []
cuda = ["cudarc"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
