[package]
name = "openoxygen-cli-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openoxygen-core = { path = "../core" }

tokio = { workspace = true, features = ["process", "io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
csv = "1.3"

[dev-dependencies]
tokio-test = "0.4"
