[package]
name = "openoxygen-core"
version = "0.1.0"
edition = "2021"
authors = ["OpenOxygen Team"]
description = "OpenOxygen 2.0 Core Runtime"

[dependencies]
tokio = { version = "1.43", features = ["full", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]
