[package]
name = "openoxygen-gui-control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openoxygen-core = { path = "../core" }
openoxygen-ouv = { path = "../ouv" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }
uuid = { workspace = true }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
]

[dev-dependencies]
tokio-test = "0.4"
