[package]
name = "openoxygen-htn-planner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openoxygen-core = { path = "../core" }
openoxygen-memory = { path = "../memory" }
openoxygen-gui-control = { path = "../gui-control" }
openoxygen-cli-executor = { path = "../cli-executor" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
