[package]
name = "openoxygen-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openoxygen-core = { path = "../core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Persistence
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid"] }
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
