[package]
name = "openoxygen-vlm-connector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openoxygen-core = { path = "../core" }
openoxygen-gui-control = { path = "../gui-control" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
image = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
