[package]
name = "openoxygen-desktop"
version = "0.103.0"
description = "OpenOxygen Desktop Application"
authors = ["OpenOxygen Team"]
license = "Apache-2.0"
repository = "https://github.com/StarsailsClover/OpenOxygen"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
